# rlgo

./: AUTHORS  CONCEPTS  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  configure  configure.ac
cgos/: README  gnugo.cfg  nokill.txt  rlgo.cfg
features/: Makefile.am  Makefile.in  RlCompoundFeatures.cpp  RlCompoundFeatures.h  RlLocalShape.cpp  RlLocalShape.h  RlLocalShapeConvert.cpp  RlLocalShapeConvert.h  RlLocalShapeFeatures.cpp  RlLocalShapeFeatures.h  RlLocalShapeSet.cpp  RlLocalShapeSet.h  RlLocalShapeShare.cpp  RlLocalShapeShare.h  RlLocalShapeTracker.cpp  RlLocalShapeTracker.h  RlManualFeatures.cpp  RlManualFeatures.h  RlProductFeatures.cpp  RlProductFeatures.h  RlSharedFeatures.cpp  RlSharedFeatures.h  RlStageFeatures.cpp  RlStageFeatures.h  RlSumFeatures.cpp  RlSumFeatures.h  RlToPlayFeatures.cpp  RlToPlayFeatures.h
input/: LocalShapes-3x3.w  Makefile.am  Makefile.in  SharedShapes-3x3.w  shared-memory.mem  shared-memory.sem
learning/: Makefile.am  Makefile.in  RlMCRules.cpp  RlMCRules.h  RlTDRules.cpp  RlTDRules.h
m4/: ax_boost_unit_test_framework.m4
policies/: Makefile.am  Makefile.in  RlEpsilonPolicy.cpp  RlEpsilonPolicy.h  RlFuegoPolicy.cpp  RlFuegoPolicy.h  RlGibbs.cpp  RlGibbs.h  RlMCPolicy.cpp  RlMCPolicy.h  RlPriorityPolicy.cpp  RlPriorityPolicy.h  RlSearch.cpp  RlSearch.h  RlTwoStagePolicy.cpp  RlTwoStagePolicy.h
rlgo/: Makefile.am  Makefile.in  RlActiveSet.h  RlAgent.cpp  RlAgent.h  RlAgentLog.cpp  RlAgentLog.h  RlAgentLogger.cpp  RlAgentLogger.h  RlAgentPlayer.cpp  RlAgentPlayer.h  RlAlphaBeta.cpp  RlAlphaBeta.h  RlBinaryFeatures.cpp  RlBinaryFeatures.h  RlConvert.h  RlDirtySet.cpp  RlDirtySet.h  RlEvaluator.cpp  RlEvaluator.h  RlFuegoPlayout.cpp  RlFuegoPlayout.h  RlHistory.cpp  RlHistory.h  RlLearningRule.cpp  RlLearningRule.h  RlLogger.cpp  RlLogger.h  RlMoveFilter.cpp  RlMoveFilter.h  RlPolicy.cpp  RlPolicy.h  RlSetup.cpp  RlSetup.h  RlSimulator.cpp  RlSimulator.h  RlState.cpp  RlState.h  RlTex.cpp  RlTex.h  (+12 more)
rlgomain/: Makefile.am  Makefile.in  RlCommands.cpp  RlCommands.h  RlEngine.cpp  RlEngine.h  RlForceLink.cpp  RlForceLink.h  RlMain.cpp
scripts/: Makefile.am  Makefile.in  analyze-elo.sh  analyze-experiment.sh  analyze-match.sh.in  analyze-matches.sh  analyze-tournament.sh  calc-elo.py  elo.txt  experiment.sh  farm.py  generate-players.sh  getprogram.sh.in  gtp.py  match.sh.in  multi-elo.sh  multi-matches.sh  multi-run.sh  pair.py  plot-tournament.sh  submit-host.sh  submit-para.sh  submit-seq.sh  submit-test.sh  test-experiment.sh  test-getprogram.sh  test-matches.sh  test.gtp  tournament-mt.sh  tournament.sh
settings/: Makefile.am  Makefile.in  dyna2-settings.set  dyna2.set  hybrid.set  localshape-settings.set  localshape.set  tdlearn-settings.set  tdlearn.set  tdsearch-settings.set  tdsearch.set  tourney.set  vanilla-uct.cfg
unittest/: Makefile.am  Makefile.in  RlActiveSetTest.cpp  RlAlphaBetaTest.cpp  RlEvaluatorTest.cpp  RlLocalShapeConvertTest.cpp  RlLocalShapeTest.cpp  RlTDLambdaTest.cpp  RlTDTest.cpp  RlTestMain.cpp  RlTestUtil.cpp  RlTestUtil.h
unittest/.deps/: rlgo_unittest-RlActiveSetTest.Po  rlgo_unittest-RlEvaluatorTest.Po  rlgo_unittest-RlLocalShapeTest.Po  rlgo_unittest-RlTDTest.Po  rlgo_unittest-RlTestMain.Po  rlgo_unittest-RlTestUtil.Po
utils/: Makefile.am  Makefile.in  RlConfig.h.in  RlFactory.cpp  RlFactory.h  RlHashUtil.h  RlMathUtil.h  RlMiscUtil.h  RlMoveUtil.cpp  RlMoveUtil.h  RlPointUtil.cpp  RlPointUtil.h  RlProcessUtil.cpp  RlProcessUtil.h  RlShapeUtil.cpp  RlShapeUtil.h  RlStreamUtil.cpp  RlStreamUtil.h  RlUtils.h
