ACLOCAL_AMFLAGS = -I m4

DISTCHECK_CONFIGURE_FLAGS = \
--with-boost-thread=mt-1_35 \
--with-boost-filesystem=mt-1_35 \
--with-boost-system=mt-1_35

SUBDIRS = \
utils \
rlgo \
policies \
features \
learning \
rlgomain

EXTRA_DIST = \
input/LocalShapes-3x3.w \
settings/dyna2-settings.set \
settings/localshape-settings.set \
settings/tdlearn-settings.set \
settings/tdsearch-settings.set \
settings/vanilla-uct.cfg \
scripts/analyze-elo.sh \
scripts/analyze-experiment.sh \
scripts/analyze-match.sh.in \
scripts/analyze-matches.sh \
scripts/analyze-tournament.sh \
scripts/calc-elo.py \
scripts/elo.txt \
scripts/experiment.sh \
scripts/farm.py \
scripts/generate-players.sh \
scripts/getprogram.sh.in \
scripts/match.sh.in \
scripts/multi-elo.sh \
scripts/multi-matches.sh \
scripts/multi-run.sh \
scripts/pair.py \
scripts/plot-tournament.sh \
scripts/submit-host.sh \
scripts/submit-para.sh \
scripts/submit-seq.sh \
scripts/submit-test.sh \
scripts/tournament-mt.sh \
scripts/tournament.sh