ACLOCAL_AMFLAGS = -I m4

DISTCHECK_CONFIGURE_FLAGS = \
--with-fuego-dir=/Users/silver/fuego-0.4 \
--with-boost-thread=mt-1_35 \
--with-boost-filesystem=mt-1_35 \
--with-boost-system=mt-1_35 \
--with-boost-unit-test-framework=mt-1_35

SUBDIRS = \
utils \
rlgo \
policies \
features \
learning \
rlgomain \
unittest \
input \
scripts \
settings

EXTRA_DIST = \
CONCEPTS