TESTS = \
test-getprogram.sh \
test-matches.sh

EXTRA_DIST = \
analyze-elo.sh \
analyze-experiment.sh \
analyze-match.sh.in \
analyze-matches.sh \
analyze-tournament.sh \
calc-elo.py \
experiment.sh \
farm.py \
generate-players.sh \
getprogram.sh.in \
match.sh.in \
multi-elo.sh \
multi-matches.sh \
multi-run.sh \
pair.py \
plot-tournament.sh \
submit-host.sh \
submit-para.sh \
submit-seq.sh \
submit-test.sh \
test.gtp \
test-getprogram.sh \
tournament-mt.sh \
tournament.sh