noinst_LIBRARIES = librlgo_utils.a

librlgo_utils_a_SOURCES = \
RlFactory.cpp \
RlMoveUtil.cpp \
RlPointUtil.cpp \
RlProcessUtil.cpp \
RlShapeUtil.cpp \
RlStreamUtil.cpp

noinst_HEADERS = \
RlFactory.h \
RlHashUtil.h \
RlMathUtil.h \
RlMiscUtil.h \
RlMoveUtil.h \
RlPointUtil.h \
RlProcessUtil.h \
RlShapeUtil.h \
RlStreamUtil.h \
RlUtils.h

librlgo_utils_a_CPPFLAGS = \
$(BOOST_CPPFLAGS) \
-I@fuego_dir@ \
-I@fuego_dir@/smartgame \
-I@fuego_dir@/go \
-I@top_srcdir@

DISTCLEANFILES = *~
